add os endpoint na documentação entertainmentStatus e entertainmentTypes
